--- a/200909.md
+++ b/200909.md
@@ -41,10 +41,10 @@
   - Unary Operator(단항연산자): 피연산자가 한 개인 경우
 
     ```swift
-    +a  // 🙆
-    + a // 🙅
+    +a  // 올바른 문법
+    + a // 잘못된 문법
     
-    // 단항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 없어야 한다!
+    // 단항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 없어야 한다.
     ```
 
   
@@ -53,15 +53,15 @@
 
     ```swift
     a+b
-    // 1. 🤷
+    // 1. 애매한 문법
     
     a + b
-    // 2. 🙆
+    // 2. 올바른 문법
     
     a+ b
-    // 3. 🙅
+    // 3. 잘몬된 문법
     // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
-    // 사이 공백을 주지 않아도 되지만, 가끔 오류가 날 수 있으므로 2번째 예시가 권장!
+    // 사이 공백을 주지 않아도 되지만, 가끔 오류가 날 수 있으므로 2번째 예시가 권장.
     ```
   
 
@@ -123,14 +123,13 @@
   //📋 메모리 크기가 늘어나는 연산자가 아님! 값이 순환하기 때문에 -128이 된다.
   ```
 
-  📋 지금(2020년 9월 9일 기준)은 왕초보니까 모르는 척 하기 😢
 
 
 
 - #### 비교 연산자
 
-  - 비교 연산자는 이항 연산자에 사용되고, 결과는 항상 bool(true 또는 false)값이어야 한다.
-  - 피연산자의 자료형이 같아야 비교 가능!
+  - 비교 연산자는 이항 연산자이고, 결과는 항상 Bool이다.
+  - 피연산자의 자료형이 같아야 비교 가능하다.
   - `== Equa to  `                두 값이 같으면 true
   - `!=  Not Equa to  `      두 값이 다르면 true
   - `>, >=, <, <=  `            크기를 비교하는 비교 연산자 
@@ -140,7 +139,7 @@
 
 - #### 논리 연산자
 
-  - 참과 거짓을 구분하는 연산자고, 피연산자와 결과가 모두 boolean 표현식이어야 한다. ✨
+  - 참과 거짓을 구분하는 연산자이고, 피연산자는 항상 Boolean 표현식이어야 한다. 연산의 결과는 항상 Bool이다. ✨
 
   - `!`       Logical Not Operators (논리 부정 연산자)로 참을 거짓으로, 거짓을 참으로 바꿔준다. 전치 연산자로만 사용.
 
@@ -148,13 +147,11 @@
     
   - `||`     Logical OR Operators로 하나의 피연산자가 true여도 true가 리턴이 된다.
   
-- `Short-circuit Evaluation`  단락평가, 결과 도출에 필요한 최소한의 논리식만 평가하는 방식 ✨
+  - `Short-circuit Evaluation`  단락평가, 결과 도출에 필요한 최소한의 논리식만 평가하는 방식 ✨
+    
+  - `Side Effect`     코드의 실행 결과로 인해, 값 또는 상태가 변경되는 것. 논리식에 Side Effect를 발생시킬 수 있는 코드가 포함되어 있는 경우, 논리적인 오류가 발생할 수 있기 때문에 조심해야 한다.
   
-  - `Side Effect`     코드의 실행 결과로 인해, 값 또는 상태가 변경되는 것.
-                              논리식에 Side Effect를 발생시킬 수 있는 코드가 포함되어 있는 경우,
-                                 논리적인 오류가 발생할 수 있기 때문에 조심해야 한다.
-     
-     ```swift
+  - ```swift
      true && true // true
      true && false // false
      false && true // false
@@ -181,8 +178,8 @@
 
   - Bool 표현식 ? 동일한 자료형 : 동일한 자료형
 
-    ```swift
-    let myAgeIs = 29
+  - ```swift
+  let myAgeIs = 29
     
     myAgeIs == 29 ? "true" : "false"
     
@@ -209,14 +206,15 @@
 
 - #### 범위 연산자 (Range Operator)
 
-  -  `a ... b` 의 형태로 이항 연산자와 사용할 수 있고,
-     `a...`  또는  `...a`처럼 단항연산자에도 사용할 수 있다.
+  -  `a ... b` 의 이항 연산자이고,
+     `a...`  또는  `...a`처럼 단항연산자로 사용할 수 있다.
+     
+  - ```swift
+     a ... b // a부터 b까지의 범위, 오름차순이 기준이고 내림차순으로 사용하고 싶을 땐
+     (a ... b).reversed() // 로 표현한다.
+     ```
   
-  
-    ```swift
-    a ... b // a부터 b까지의 범위, 오름차순이 기준이고 내림차순으로 사용하고 싶을 땐
-    (a ... b).reversed() // 로 표현한다.
-    ```
+     
   
   📋 단항 연산자로 사용할 땐, 피연산자와 공백없이 붙여서 써야 하고 무한 loop에 빠지지 않도록 주의할 것!
   
@@ -236,8 +234,8 @@
 
   - 삼항 연산자와 할당 연산자는 허용하지 않는다.
 
-    ```swift
-    // 연산자 메소드 문법
+  - ```swift
+  // 연산자 메소드 문법
     
     static func operator(parameters) -> ReturnType {
     	statements
