--- a/200909.md
+++ b/200909.md
@@ -87,41 +87,48 @@
 
 - #### 산술 연산자  
 
-  ` / 나누기의 몫` 	` * 곱하기` 	` % 나머지`
+  - ` / 나누기의 몫` 
 
-  ```swift
-  let a = 10
-  let b = 2
+  - ` * 곱하기` 	
   
-  a / b // 5
-  a * b // 20
-  a % b // 0
-  ```
+  - ` % 나머지`
+  
+  - ```swift
+    let a = 10
+    let b = 2
+    
+    a / b // 5
+    a * b // 20
+    a % b // 0
+    ```
+  
+    
 
 
 
 
 - #### Overflow
 
-  자료형에 저장할 수 있는 값의 범위를 초과하는 것을 Overflow라고 한다. Swift 산술 연산자가 (산술)Overflow를 허용하지 않지만, 특정 패턴을 구현하기 위해 Overflow연산자를 사용한다.
-
-  📋 Compile Time에 발견한 Overflow는 더 큰 자료형으로 변경해주면 문제를 해결할 수 있다.
-
-  ```swift
-  let a: Int8 = Int8.max // 127
-  let b: Int8 = a + 1 // 컴파일 에러가 발생한다. 
-  ```
-
-  연산자 앞에 `&(앰퍼샌드)`를 붙여서 Overflow 연산을 허용할 수 있다.	
-
-  ```swift
-  let a: Int8 = Int8.max // 127
-  let b: Int8 = a &+ 1 // -128
   
-  //📋 메모리 크기가 늘어나는 연산자가 아님! 값이 순환하기 때문에 -128이 된다.
-  ```
-
-
+- 자료형에 저장할 수 있는 값의 범위를 초과하는 것을 Overflow라고 한다. Swift 산술 연산자가 (산술)Overflow를 허용하지 않지만, 특정 패턴을 구현하기 위해 Overflow연산자를 사용한다.
+  
+-  Compile Time에 발견한 Overflow는 더 큰 자료형으로 변경해주면 문제를 해결할 수 있다.
+  
+  - 연산자 앞에 `&(앰퍼샌드)`를 붙여서 Overflow 연산을 허용할 수 있다.	
+  
+  - ```swift
+  let a: Int8 = Int8.max // 127
+    let b: Int8 = a &+ 1 // -128
+  
+    // 메모리 크기가 늘어나는 연산자가 아님! 값이 순환하기 때문에 -128이 된다.
+    ```
+  
+  - ```swift
+    let a: Int8 = Int8.max // 127
+    let b: Int8 = a + 1 // 컴파일 에러가 발생한다. 
+    ```
+  
+    
 
 
 - #### 비교 연산자
