--- a/200907.md
+++ b/200907.md
@@ -126,10 +126,10 @@
   
   ```swift
   var myAgeIs = 28
-  myAgeIs = 29 // 🙆
+  myAgeIs = 29 // 값을 다시 저장할 수 있다.
   
   var myAgeIs = 28
-  var myAgeIs = 29 // 🙅
+  var myAgeIs = 29 // 다시 선언할 수 없다.
   ```
 
 
@@ -145,7 +145,7 @@
 
   ```swift
   let myAgeIs = 28
-  myAgeIs = 29 // 🙅
+  myAgeIs = 29 // 값을 다시 저장할 수 없다.
   ```
 
 
