--- a/200907.md
+++ b/200907.md
@@ -51,52 +51,38 @@
 
 - #### Token, Expression, Statement
 
-  `Token(토큰)` 	더 이상 쪼갤 수 없는 프로그래밍 요소 (Identifier, Keywords, Literals, 연산자 등)
+  - `Token(토큰)` 	더 이상 쪼갤 수 없는 프로그래밍 요소 (Identifier, Keywords, Literals, 연산자 등)
 
-  `Expression(표현식)`	변수나 상수, 연산자, 함수 등 하나의 값이 도출되게 하는 식
+  - `Expression(표현식)`	변수나 상수, 연산자, 함수 등 하나의 값이 도출되게 하는 식
 
-  `Statement(문, 문장)` 	하나 이상의 Expression이 모여 특정 작업을 실행하는 코드블럭 (Statement)
-
- 
-
-
+  - `Statement(문, 문장)` 	하나 이상의 Expression이 모여 특정 작업을 실행하는 코드블럭 (Statement)
+  
+     
 
 - #### Literal, Identifier, Keyword 
 
-  ` Literal(리터럴)` 			코드 내에서 의미가 변하지 않고 있는 그대로 사용되는 값
-
-  `Identifier(식별자)`	   코드에 포함된 요소를 구별하기 위해 사용하는 이름
-
-  `Keyword(키워드)` 			특정 기능을 사용하기 위해 프로그래밍 언어가 미리 사용하고 있는 예약어
+  - ` Literal(리터럴)` 			코드 내에서 의미가 변하지 않고 있는 그대로 사용되는 값
+- `Identifier(식별자)`	   코드에 포함된 요소를 구별하기 위해 사용하는 이름
+  - `Keyword(키워드)` 			특정 기능을 사용하기 위해 프로그래밍 언어가 미리 사용하고 있는 예약어
                                           (이미 Apple에서 기능을 넣어서 사용하고 있는 특정한 ''키워드''라, Identifier로 사용할 수 없음!)
-  
-
-
 
 
 
 - #### Compile, Link
 
-  ` Compile(컴파일)` 	우리가 입력한 코드를 컴퓨터가 이해할 수 있게 바이너리코드로 변환하는 것
-                                  (📋 Xcode에 내장되어있는 컴파일러를 통해 컴파일할 수 있다.)
+  - ` Compile(컴파일)` 	우리가 입력한 코드를 컴퓨터가 이해할 수 있게 바이너리코드로 변환하는 것
   
-  `Link(링크)`			 이미 만들어져 있는 기능(라이브러리 등)을 우리가 만든 코드와 연결하는 것
-
-
-
-
+  - `Link(링크)`			 이미 만들어져 있는 기능(라이브러리 등)을 우리가 만든 코드와 연결하는 것
+  
+    
 
 - #### 특수문자
 
-  ` {} Brace` 	`<> Angle Bracket`	 `| Pipe 또는 Vertical Bar` 	`[] Square Bracket`
+  - ` {} Brace` 	`<> Angle Bracket`	 `| Pipe 또는 Vertical Bar` 	`[] Square Bracket`
 
-  `() Parentheses` 	` : Colon` 	`~ Tilde	 `	`_ Underscore`	
+    `() Parentheses` 	` : Colon` 	`~ Tilde	 `	`_ Underscore`	
 
-  📋 모든 특수문자를 외울 필요는 없지만, 자주 사용하는 특수문자의 정확한 명칭을 알고 사용할 것!
-
-
-
-
+  
 
 
 - #### First Class Citizen ✨ 
@@ -104,7 +90,6 @@
   - 상수와 변수에 저장할 수 있다.
   - 파라미터로 전달할 수 있다.
   - 함수에서 리턴할 수 있다. 
-  - 📋  아직 내용은 모르지만 암기할 것!
 
 
 
@@ -116,37 +101,36 @@
 
 - #### 변수
 
-  `var` 	 영어로는 Variable. var 키워드로 선언할 수 있고, 값을 저장할 수 있다.
+  - 영어로는 Variable. `var` 키워드로 선언할 수 있고, 값을 저장할 수 있다.
 
-  ​			  최초로 값을 저장하는 행위를 초기화라고 표현한다.
+  - 최초로 값을 저장하는 행위를 초기화라고 표현한다.
 
-  ​			  값을 저장한 후에, 다시 값을 저장할 수 있다.
+  - 값을 저장한 후에, 다시 값을 저장할 수 있다.
 
-  ​			  같은 Identifier로 재선언할 수는 없다. ✨
+  - 같은 Identifier로 재선언할 수는 없다. ✨
   
-  ```swift
-  var myAgeIs = 28
-  myAgeIs = 29 // 값을 다시 저장할 수 있다.
+  - ```swift
+    var myAgeIs = 28
+    myAgeIs = 29 // 값을 다시 저장할 수 있다.
+    
+    var myAgeIs = 28
+    var myAgeIs = 29 // 다시 선언할 수 없다.
+    ```
   
-  var myAgeIs = 28
-  var myAgeIs = 29 // 다시 선언할 수 없다.
-  ```
-
-
-
-
+    
 
 
 - #### 상수
 
-  `let` 	 영어로는 Constant. let 키워드로 선언할 수 있고, 변수와는 다르게 초기화한 후에는 새로운 값을 저장할 수 없다.
 
-  ​			  실수로 값을 변경해도 컴파일에러가 나기 때문에, 컴파일 단계에서 실수를 줄일 수 있는 장점이 있다.
+  - 영어로는 Constant. `let` 키워드로 선언할 수 있고, 변수와는 다르게 초기화한 후에는 새로운 값을 저장할 수 없다.
 
-  ```swift
-  let myAgeIs = 28
-  myAgeIs = 29 // 값을 다시 저장할 수 없다.
-  ```
+  -   실수로 값을 변경해도 컴파일에러가 나기 때문에, 컴파일 단계에서 실수를 줄일 수 있는 장점이 있다.
+
+  - ```swift
+    let myAgeIs = 28
+    myAgeIs = 29 // 값을 다시 저장할 수 없다.
+    ```
 
 
 
@@ -169,15 +153,13 @@
 
   - 동일한 Scope에 선언되어있는 변수와 상수에 접근할 수 있다.
 
-  - Local Scope에서는 Global Scope나 바깥 범위의 Scope로 접근할 수 있다.
-    (선언되어 있지 않은 코드의 경우, 접근할 수 없다.)
-
-  - 더 안쪽 범위에 있는 Scope엔 접근할 수 없다.
+  - Local Scope에서는 Global Scope나 바깥 범위의 Scope로 접근할 수 있다. (선언되어 있지 않은 코드의 경우, 접근할 수 없다.)
+    
+- 더 안쪽 범위에 있는 Scope엔 접근할 수 없다.
     
   - 서로 다른 Scope에 동일한 이름을 가진 변수나 상수가 있다면, 가장 인접한 Scope에 있는 변수나 상수에 접근한다.
     
-  - Global Scope에서 선언한 상수와 변수는 최초에 접근할 때 생성되고,
-      직접 삭제하지 않는 한 프로그램이 종료될 때까지 유지된다.
+  - Global Scope에서 선언한 상수와 변수는 최초에 접근할 때 생성되고, 직접 삭제하지 않는 한 프로그램이 종료될 때까지 유지된다.
   - Local Scope에 위치한 코드는 해당 Scope가 실행(호출)될 때 실행된다.
 
 
@@ -220,34 +202,29 @@
     
     
   - Bool형: true 또는 false로 값을 나타내는 자료형
-
-
-
-```swift
-var age: Int = 29
   
-var ratio: Double = 3.141592653589793
-  
-var message: String = "good night🌙"
-  
-var areYouInsane: Bool = false
-```
-
-
+    - ```swift
+      var age: Int = 29
+        
+      var ratio: Double = 3.141592653589793
+        
+      var message: String = "good night🌙"
+        
+      var areYouInsane: Bool = false
+      ```
 
 
 
 - #### Type Inference & Type Annotation
 
-   형식 추론은 초기화값을 통해 자료형을 유추하는 것이기 때문에, 초기값이 없다면 형식추론이 이루어지지 않는다.
+   - 형식 추론은 초기화값을 통해 자료형을 유추하는 것이기 때문에, 초기값이 없다면 형식추론이 이루어지지 않는다.
 
-   자료형을 직접 지정할 수도 있는데, 이걸 Type Annotation이라고 한다. ✨ 
+   - 자료형을 직접 지정할 수도 있는데, 이걸 Type Annotation이라고 한다. ✨ 
 
-   📋 직접 자료형을 지정해주면 자료형을 추론하는 시간을 줄일 수 있고, 결과적으로 컴파일 시간을 단축할 수 있다.
-
-
-
-
+   - 직접 자료형을 지정해주면 자료형을 추론하는 시간을 줄일 수 있고, 결과적으로 컴파일 시간을 단축할 수 있다.
+   
+      
+   
 
 - #### Type Conversion
 
@@ -255,38 +232,39 @@ var areYouInsane: Bool = false
 
   - `자료형이름(컨버젼할 값)`의 형태로 사용할 수 있다.
 
-  ```swift
-  let num1: Int = 100
-  let num2: Double = 1.234567890
+  - ```swift
+    let num1: Int = 100
+    let num2: Double = 1.234567890
+    
+    let mul1 = num1 * Int(num2)
+    
+    // Prints: 100
+    // 이렇게 해도 되지만, 값의 오차가 커질 수 있기 때문에 어떤 값을 Type Conversion 해야 하는지 주의 할 것!
+    
+    let mul2 = Double(num1) * num2 
+    // Prints: 123.456789
+    ```
   
-  let mul1 = num1 * Int(num2)
-  
-  // Prints: 100
-  // 이렇게 해도 되지만, 값의 오차가 커질 수 있기 때문에 어떤 값을 Type Conversion 해야 하는지 주의 할 것!
-  
-  let mul2 = Double(num1) * num2 
-  // Prints: 123.456789
-  ```
 
 
 
 - #### typealias
 
-  -  `typealias` 	기본 자료형에 typealias를 통해서 별명을 지어주는 문법
+  - `typealias` 	기본 자료형에 typealias를 통해서 별명을 지어주는 문법
   
+  - ```swift
+    typealias Temperature = Double
+      
+    var temp: Double = 18.18
+    var temp2: Temperature = 18.18
+      
+    temp = temp2
+      
+    // 본질적으로 자료형이 같음!
+    ```
   
-  ```swift
-  typealias Temperature = Double
     
-  var temp: Double = 18.18
-  var temp2: Temperature = 18.18
-    
-  temp = temp2
-    
-  // 본질적으로 자료형이 같음!
-  ```
-
-    
+  
 
 ------
 
