구조체와 클래스
목차 수정

--- a/200925.md
+++ b/200925.md
@@ -9,9 +9,9 @@
 ### **1. Enumerations**
 
 - Enumberation 
-- Enumberation Types
-- Swift Collections
-- Copy-on-Write 최적화
+- Raw Values
+- Associated Values
+- Enumeration Case Pattern
 
 
 
@@ -155,7 +155,7 @@
 - 구조체는 '설계도'를 만들었다고 볼 수 있다. 설계도를 만들었다고, 상품이 자동으로 만들어지는 것이 아니기 때문에 인스턴스가 자동으로 생성되는 것이 아니다.
 
 - ```swift
-struct Person {
+  struct Person {
   	var name: String
   	var age: Int
       // Decalaration Scope: 이 위치에는 선언'만' 와야한다.
@@ -175,7 +175,6 @@ struct Person {
   
   // 이제 인스턴스이름을 통해 속성에 접근하거나 메소드를 호출할 수 있게 되었다.
   ```
-  
 
 
 
