프로퍼티와 메소드
메소드 내용 추가

--- a/200926.md
+++ b/200926.md
@@ -9,10 +9,20 @@
 ### **1. Property**
 
 - Stored Property
+- Computed Property
+- Type Property
+- Computed Type Property
 
 
 
-### **2.  self**
+### **2. Method**
+
+- Instance Method
+- Type Method
+
+
+
+### **3.  self**
 
 - self
 
@@ -26,7 +36,9 @@
 
 - #### Stored Property
 
-  - 구조체나 클래스 내부에 변수나 상수를 선언하면 Property(속성)가 된다. 이런 속성을 정확히 저장속성이라고 한다.
+  - 구조체나 클래스 내부에 변수나 상수를 선언하면 Property(속성)가 된다. 저장속성이라고 한다.
+
+  - 인스턴스에 속성 속성이고, 인스턴스가 생성될 때마다 새로운 메모리 공간이 생성된다.
 
   - ```swift
     struct Person {
@@ -80,7 +92,7 @@
 
 - #### Type Property
 
-  - `형식 속성`  인스턴스마다 개별 공간이 생성되지 않고, **모든 인스턴스가 공유하는 하나의 공간만 생성**한다.
+  - 형식 자체에 속한 속성이다. **모든 인스턴스가 공유하는 하나의 공간만 생성**한다.
 
   - **형식의 이름을 통해 접근**해야 한다.
 
@@ -88,6 +100,8 @@
 
   - 기본적으로 지연속성이기 때문에, 속성에 최초로 접근하는 시점에 초기화된다. 
 
+  - 저장 속성과 계산 속성을 형식 속성으로 선언할 수 있다.
+  
   - ```swift
     class Math {
         static let pi = 3.14
@@ -109,7 +123,103 @@
 
 
 
-### **2.  self**
+### **2.  Method**
+
+- #### Instance Method
+
+  - `method` 특정 형식에 속한 함수다.
+
+  - **인스턴스를 통해 호출**해야 한다.
+
+  - 함수는 특정 형식에 연관되지 않은 동작을 구현하고, 메소드는 **특정 형식에 연관된 동작을 구현**한다.
+
+  - 인스턴스 메소드는 클래스, 구조체, 열거형에서 구현할 수 있다.
+
+  - 인스턴스마다 실행 결과가 달라질 수 있다.
+
+  - ```swift
+    class Sample {
+        var data = 0
+        static var sharedData = 10
+        func doSomething() {
+            print(data)
+            Sample.sharedData // 또는 Self.sharedData
+        }
+        func call() {
+            doSomething()
+        }
+    }
+    
+    let sampleA = Sample() // 인스턴스 생성
+    sampleA.doSomething() // 인스턴스를 통해 doSomething 호출
+    sampleA.call() // 인스턴스를 통해 call 호출
+    
+    // sharedData는 타입멤버(static 멤버)다.
+    // 인스턴스 멤버에서 타입 멤버에 접근하려면, 형식 이름을 통해 접근해야한다.
+    ```
+
+  - ```swift
+    class Increase {
+        var a = 0
+        
+        func increase() {
+            a += 1
+        }
+    }
+    
+    let result = Increase() // 인스턴스 생성
+    result.increase() // a 프로퍼티를 1씩 증가시키는 메소드 호출
+    result.a // 1
+    result.increase()
+    result.a // 2
+    ```
+
+  - ```swift
+    struct Increase {
+        var a = 0
+        
+        mutating func increase() {
+            a += 1
+        }
+    }
+    
+    var result = Increase()
+    result.increase()
+    result.a
+    result.increase()
+    result.a
+    
+    // 값형식에서 인스턴스의 가변성은 멤버의 가변성에 영향을 준다.
+    // 값형식 안에서 속성을 바꾸는 메소드를 구현할때는, 반드시 mutating 키워드로 선언해야 정상적으로 실행된다.
+    ```
+
+    
+
+- #### Type Method
+
+  - 형식에 연관된 메소드. 
+
+  - ```swift
+    static func name(parameters) -> ReturnType {
+       statements
+    }
+    // 타입 메소드 선언 방법
+    
+    
+    class func name(parameters) -> ReturnType {
+       statements
+    }
+    
+    // 하위 클래스에서 재정의(Overriding)를 허용하는 키워드, 클래스 전용
+    ```
+
+
+
+------
+
+
+
+### **3.  self**
 
 - #### self
 
