변수와 상수

--- a/200907.md
+++ b/200907.md
@@ -270,10 +270,13 @@
 
 ### **5. 기타메모**
 
-- 처음보는 키워드가 나올 경우 `⌥Option`키를 눌러서 바로바로 확인하기
+- Int형식을 String형식으로 변환할 때, radix를 사용해, 원하는 진수로 바꿀 수 있다.
 
-- 번역기를 사용하면서 모르는 단어 정리해서 외우기 
+- ```swift
+  let binary = 2
+  let decimal = String(binary, radix: 2) // "10"
+  
+  // 숫자 2를 2진수로 바꾼 다음 문자열로 변경했다.
+  ```
 
-- 예습 → 리뷰 → 복습 패턴 익히기
-
-- "호출한다"는 함수, 메소드를 실행한다는 의미이므로 구분해서 사용하기
+  
