변수와 상수
오타 수정

--- a/200907.md
+++ b/200907.md
@@ -216,7 +216,7 @@
 
 - #### Type Inference & Type Annotation
 
-   - 형식 추론은 초기화값을 통해 자료형을 유추하는 것이기 때문에, 초기값이 없다면 형식추론이 이루어지지 않는다.
+   - 형식 추론은 초기값을 통해 자료형을 유추하는 것이기 때문에, 초기값이 없다면 형식추론이 이루어지지 않는다.
 
    - 자료형을 직접 지정할 수도 있는데, 이걸 Type Annotation이라고 한다. ✨ 
 
