--- a/200925.md
+++ b/200925.md
@@ -44,7 +44,7 @@
 
   - 연관된 상수들을 하나의 이름으로 묶은 자료형을 열거형이라고 한다. 열거형 안에 있는 상수들은 Enumeration Case 또는 줄여서 Case라고 한다.
 
-  - 경우의 수가 고정되어 있을 경우 활용한다. (정렬방식, 날짜, 모니터 연결 방식, 성별 등..)
+  - 경우의 수가 고정되어 있을 경우 활용한다. (정렬방식, 날짜, 모니터 연결 방식, 성별 등)
 
   - enum 키워드로 선언한다.
 
