속성과 메소드
오타수정

--- a/200926.md
+++ b/200926.md
@@ -38,7 +38,7 @@
 
   - 구조체나 클래스 내부에 변수나 상수를 선언하면 Property(속성)가 된다. 저장속성이라고 한다.
 
-  - 인스턴스에 속성 속성이고, 인스턴스가 생성될 때마다 새로운 메모리 공간이 생성된다.
+  - 인스턴스에 속한 속성이고, 인스턴스가 생성될 때마다 새로운 메모리 공간이 생성된다.
 
   - ```swift
     struct Person {
