--- a/200928.md
+++ b/200928.md
@@ -289,20 +289,23 @@
     - `Bridging` 서로 호환되는 형식을 캐스팅하는 것이다. 컴파일 타임 캐스트은 주로 브릿징에 사용된다. 
   
     - ```swift
-      let nsstr = "str" as NSString
-    // let nsstr: NSString
-      ```
-
+      let nsstr = "str" as NSString // let nsstr: NSString
+    ```
       
 
-  - Runtime Cast
+  
 
-    - 컴파일 타임에는 결과를 알 수 없다.
-
-    - `as?`는 Conditional Cast 이기 때문에, 캐스팅에 성공하면 결과를 리턴하고 실패하면 nil을 리턴한다.
-
+  
+- Runtime Cast
+  
+  - 컴파일 타임에는 결과를 알 수 없다.
+  
+  - `as?`는 Conditional Cast 이기 때문에, 캐스팅에 성공하면 결과를 리턴하고 실패하면 nil을 리턴한다.
+  
     - 주로 다운캐스팅을 할 때 사용한다.
   
+    - `as!`는 Forced Cast다. 크래시 발생 원인 중 큰 부분을 차지하므로 가급적 사용하지 않아야한다.
+    
     - ```swift
       let identify: SuperClass = SubClass()
       if let downCasting = identify as? SubClass {
@@ -313,7 +316,7 @@
       // 다운캐스팅을 구현할 때는 이 코드처럼 Conditional Cast와 옵셔널 바인딩을 함께 사용한다.
       ```
     
-    - `as!`는 Forced Cast다. 크래시 발생 원인 중 큰 부분을 차지하므로 가급적 사용하지 않아야한다.
+      
 
 
 
