상속과 재정의

--- a/200928.md
+++ b/200928.md
@@ -290,9 +290,7 @@
   
     - ```swift
       let nsstr = "str" as NSString // let nsstr: NSString
-    ```
-      
-
+      ```
   
 
   
@@ -304,7 +302,7 @@
   
     - 주로 다운캐스팅을 할 때 사용한다.
   
-    - `as!`는 Forced Cast다. 크래시 발생 원인 중 큰 부분을 차지하므로 가급적 사용하지 않아야한다.
+    - `as!` 크래시 발생 원인 중 큰 부분을 차지하므로 가급적 사용하지 않아야한다.
     
     - ```swift
       let identify: SuperClass = SubClass()
