--- a/200920.md
+++ b/200920.md
@@ -119,7 +119,7 @@
   
   - ```swift
     let alphabet = "A B C D E F G"
-    var alphabetArray = alphabet.components(separatedBy: " ")
+    var alphabetArray = alphabet.components(separatedBy: " ") // ["A", "B", "C", "D", "E", "F", "G"]
     
     alphabetArray[0...2] = ["X","Y","Z"]
     
