구조체와 클래스

--- a/200925.md
+++ b/200925.md
@@ -227,14 +227,12 @@
        var age: Int = 29
     }
     
-    /*
-    속성을 선언하면서 동시에 기본값을 저장했다.
-    이렇게 하면 파라미터가 없는 생성자가 자동으로 제공되는데, 이것을 기본 생성자(Default Initializer)라고 한다.
-    */
+    // 속성을 선언하면서 동시에 기본값을 저장했다.
+    // 이렇게 하면 파라미터가 없는 생성자가 자동으로 제공되는데, 이것을 기본 생성자(Default Initializer)라고 한다.
     ```
-
+    
   - ```swift
-    class Person {
+  class Person {
         var name: String
         var age: Int
         
@@ -244,7 +242,8 @@
         }
     }
     
-    // init() 키워드를 통해 생성자를 만들어 모든 속성의 초기값을 저장했다.
+    // 생성자를 호출해서 인스턴스를 생성해야하는데, init키워드는 이름이 없기 때문에, 형식이름()으로 호출한다.
+    // 생성자에 파라미터가 있다면, 파라미터에 전달하면 된다. (함수와 동일한 방법)
     ```
 
 
