--- a/200926.md
+++ b/200926.md
@@ -85,6 +85,7 @@
     pp.birthYear // 1970
     
     // Computed Property에서 set블록은 생략이 가능하다(Read-only Computed property, 읽기전용).
+    // 읽기전용 계산속성은 get키워드와 get블록의 {} 삭제가 가능하다.
     // 쓰기전용은 문법적으로 허용하지 않는다.
     ```
 
@@ -107,8 +108,7 @@
         static let pi = 3.14
     }
     
-    let m = Math()
-    Math.pi // 이 시점에 pi속성이 초기화된다. 
+    Math.pi // 타입 멤버에 접근할 땐 인스턴스를 만들지 않아도 접근할 수 있다.
     ```
 
 
