--- a/200925.md
+++ b/200925.md
@@ -221,6 +221,10 @@
 
   - 생성자 실행이 종료되는 시점에는 **모든 속성의 초기값이 저장**되어 있어야 한다.
 
+  - 생성자를 호출해서 인스턴스를 생성해야하는데, init키워드는 이름이 없기 때문에, 형식이름()으로 호출한다.
+  
+  - 생성자에 파라미터가 있다면, 파라미터에 전달하면 된다.
+  
   - ```swift
     class Person {
     	 var name: String = "Logan"
@@ -228,11 +232,11 @@
     }
     
     // 속성을 선언하면서 동시에 기본값을 저장했다.
-    // 이렇게 하면 파라미터가 없는 생성자가 자동으로 제공되는데, 이것을 기본 생성자(Default Initializer)라고 한다.
+  // 이렇게 하면 파라미터가 없는 생성자가 자동으로 제공되는데, 이것을 기본 생성자(Default Initializer)라고 한다.
     ```
   
   - ```swift
-  class Person {
+    class Person {
         var name: String
         var age: Int
         
@@ -241,9 +245,6 @@
             age = 29
         }
     }
-    
-    // 생성자를 호출해서 인스턴스를 생성해야하는데, init키워드는 이름이 없기 때문에, 형식이름()으로 호출한다.
-    // 생성자에 파라미터가 있다면, 파라미터에 전달하면 된다. (함수와 동일한 방법)
     ```
 
 
