속성과 메소드
지연저장속성 내용 추가

--- a/200926.md
+++ b/200926.md
@@ -12,6 +12,7 @@
 - Computed Property
 - Type Property
 - Computed Type Property
+- Lazy Stored Property
 
 
 
@@ -22,7 +23,7 @@
 
 
 
-### **3.  self**
+### **3. self**
 
 - self
 
@@ -116,6 +117,23 @@
 - #### Computed Type Property
 
   - 계산 형식 속성을 static으로 선언하면, 서브클래스에서 오버라이딩이 금지된다. 
+
+
+
+- #### Lazy Stored Property
+
+  - 저장속성을 초기화할 때 다른 속성에 접근해야 한다면, 지연저장속성으로 선언해야 한다.
+
+  - ```swift
+    class Name {
+        var givenName: String = "GOOKJO"
+        lazy var fullName = givenName + " GWON"
+    }
+    ```
+
+    
+
+
 
 
 
@@ -235,7 +253,7 @@
         var height = 0.0
         
         func calcArea() -> Double {
-            return self.width * height
+            return self.width * height // self.는 생략도 가능하다.
         }
         
         var area: Double {
@@ -253,4 +271,4 @@
     }
     ```
 
-    
+
