--- a/201007.md
+++ b/201007.md
@@ -41,19 +41,12 @@
   - 서브스크립트, Nested Type 추가 가능
 
   - ```swift
-    struct MyBody {
-        var kg: Double
-        var m: Double
-    }
-    
-    extension MyBody {
-        var bmi: Double {
-            return self.kg / (self.m * self.m) // 계산속성으로 추가해야한다.
+    extension Date {
+        var year: Int {
+            return Calendar.current.component(.year, from: self)
+          // 애플이 제공하는 형식이나 라이브러리 형태로 제공되어서 코드를 수정할 수 없는 경우에는 익스텐션으로 확장해야 한다.
         }
     }
-    
-    var body = MyBody(kg: 58.8, m: 1.72)
-    body.bmi // 19.87560843699297
     ```
 
 
@@ -62,7 +55,6 @@
 - #### Extension과 생성자
 
   - extension으로 생성자를 추가하면, 기본으로 제공되는 생성자와 함께 사용할 수 있어 유용하게 쓸 수 있다.
-  - 예제 추가 예정
 
 
 
@@ -72,5 +64,25 @@
 
 ### **2. 기타메모**
 
-- 복습하면서 내용 추가
+- 방대한 모든 자료형과 형식, 메소드를 외울 수는 없지만, Date 등 자주 쓰는 형식은 나만의 extension을 만들거나 참고하여 포트폴리오로도 활용하거나 능률을 올릴 수 있다.
+
+- ```swift
+  extension Date {
+      init?(_ year: Int, _ month: Int, _ day: Int) {
+          let calendar = Calendar.current   
+          var comps = DateComponents()
+          comps.year = year
+          comps.month = month
+          comps.day = day
+          guard let date = calendar.date(from: comps) else { return nil }
+          self = date
+      }  
+  }
+  
+  let oneDay = Date(2002, 1, 1)
+  // 익스텐션으로 날짜를 구현해두면 사용하기 편하다.
+  // 만약 날짜를 만드는 익스텐션을 구현하고 싶은 경우, 값을 잘못 입력했을 경우를 대비해 failable initialier을 사용해주는게 좋다.
+  ```
+
+  
 
