--- a/201006.md
+++ b/201006.md
@@ -33,27 +33,29 @@
 
   - 새로운 인스턴스를 생성하는 것을 초기화라고 하는데, 인스턴스의 초기화를 담당하는 것이 바로 Initializer다.
 
+  - 초기화가 완료되었을 때(성공했을 때), 모든 속성은 기본값을 가지고 있게 된다.
+
   - 옵셔널 속성은 기본값을 저장하지 않으면 nil로 초기화된다.
 
   - 초기화 방법은 두가지가 있다.
 
     - ① 선언과 동시에 기본값을 저장 (새로운 인스턴스가 생성되는 시점에 자동으로 기본값이 저장)
 
-    - ② Initializer에서 초기화
-
+    - ② Initializer를 통해 초기화
+  
     - ```swift
       class Initialization {
           
-          var x = 0 // ①
+          var x = 0 // ① Default Initializer(기본 생성자) 제공
           var y: Int
           
           init() { // ②
               y = 0
           }
           
-      }
+    }
       ```
-
+  
       
 
 
@@ -80,9 +82,20 @@
 
   - Designated Initializer (지정 생성자)
     - 모든 속성을 초기화해야한다.
-    - `Initializer Delegation` Class의 경우 한 가지 역할이 더 추가되는데, Initializer 실행이 완료되기 전에 Super Class의 Designated Initializer를 호출해야 한다.
-
-  
+    
+    - ```swift
+      class MyBody {
+          var kg: Double
+          var cm: Double
+          
+          init(kg: Double, cm: Double) {
+              self.kg = kg
+              self.cm = cm
+          }
+      }
+      ```
+    
+      
 
   - Convenience Initializer (간편 생성자)
 
