프로그래밍 기본 용어와 규칙

--- a/200907.md
+++ b/200907.md
@@ -53,9 +53,9 @@
 
   - `Token(토큰)` 	더 이상 쪼갤 수 없는 프로그래밍 요소 (Identifier, Keywords, Literals, 연산자 등)
 
-  - `Expression(표현식)`	변수나 상수, 연산자, 함수 등 하나의 값이 도출되게 하는 식
+  - `Expression(표현식)`	변수나 상수, 연산자, 함수 등 **하나의 값이 도출**되게 하는 식
 
-  - `Statement(문, 문장)` 	하나 이상의 Expression이 모여 특정 작업을 실행하는 코드블럭 (Statement)
+  - `Statement(문, 문장)` 	하나 이상의 Expression이 모여 특정 작업을 실행하는 코드블럭 (할당문, 호출문, 흐름제어문, 반복문 등)
   
      
 
@@ -63,8 +63,7 @@
 
   - ` Literal(리터럴)` 			코드 내에서 의미가 변하지 않고 있는 그대로 사용되는 값
   - `Identifier(식별자)`	   코드에 포함된 요소를 구별하기 위해 사용하는 이름
-  - `Keyword(키워드)` 			특정 기능을 사용하기 위해 프로그래밍 언어가 미리 사용하고 있는 예약어
-           (이미 Apple에서 기능을 넣어서 사용하고 있는 특정한 ''키워드''라, Identifier로 사용할 수 없음!)
+  - `Keyword(키워드)` 			특정 기능을 사용하기 위해 프로그래밍 언어가 미리 사용하고 있는 예약어 
 
 
 
@@ -123,16 +122,16 @@
 - #### 상수
 
 
-  - 영어로는 Constant. `let` 키워드로 선언할 수 있고, 변수와는 다르게 초기화한 후에는 새로운 값을 저장할 수 없다.
+    - 영어로는 Constant. `let` 키워드로 선언할 수 있고, 변수와는 다르게 초기화한 후에는 새로운 값을 저장할 수 없다.
 
-  -   실수로 값을 변경해도 컴파일에러가 나기 때문에, 컴파일 단계에서 실수를 줄일 수 있는 장점이 있다.
+    - 실수로 값을 변경해도 컴파일에러가 나기 때문에, 컴파일 단계에서 실수를 줄일 수 있는 장점이 있다.
 
-  - ```swift
-    let myAgeIs = 28
-    myAgeIs = 29 // 값을 다시 저장할 수 없다.
-    ```
+    - ```swift
+      let myAgeIs = 28
+      myAgeIs = 29 // 값을 다시 저장할 수 없다.
+      ```
 
-
+  
 
 ------
 
@@ -167,7 +166,7 @@
 
 
 
-### **4. Data Taype (자료형)**
+### **4. Data Type (자료형)**
 
 - #### Swift에서 제공하는 기본 자료형
 
@@ -177,31 +176,31 @@
 
   - 정수형
 
-    -  `Int`     Signed 정수형: 음수와 양수 범위 모두 저장 가능 (⚾︎ 정수형의 기본 자료형)
+    -  `Int`     Signed 정수형: 음수와 양수 범위 모두 저장 가능 (정수형의 기본 자료형)
     -  `UInt`   Unsigned 정수형: 0과 양수만 저장 가능
+
+
   
-    
 
   - 소수점이 포함된 숫자형
 
     - 실수를 저장할 땐 지수와 가수를 나눠서 저장하기 때문에, 동일한 메모리 크기에서 정수에 비해 더 넓은 범위를 표현할 수 있다.
+    - 부동 소수점 오차로 인해 100% 정확히 숫자를 입력할 수 없다.
+    - `Double`   소수점이 포함된 숫자형의 기본 자료형 (소수점 15자리 이상도 저장할 수 있으나 오차가 발생)
+    - `Float`     소수점 6자리 이상도 저장할 수 있으나 오차 발생
     
-  - 부동 소수점 오차로 인해 100% 정확히 숫자를 입력할 수 없다.
-    - `Double`   소수점이 포함된 숫자형의 기본 자료형.
-      소수점 15자리 이상도 저장할 수 있으나 오차가 발생 (⚾︎ 소수점 숫자형의 기본 자료형)
-    -  `Float`     소수점 6자리 이상도 저장할 수 있으나 오차 발생
+
   
-  
-  
+
   - 문자형
     
-    - `String`  문자 또는 문장을 저장 가능 (⚾︎ 문자형의 기본 자료형)
+    - `String`  문자 또는 문장을 저장 가능 (문자형의 기본 자료형)
     - ` Character`  단 하나의 문자만 저장 가능
     
     
     
   - Bool형: true 또는 false로 값을 나타내는 자료형
-  
+
     - ```swift
       var age: Int = 29
         
@@ -248,7 +247,7 @@
 
 - #### typealias
 
-  - `typealias` 	기본 자료형에 typealias를 통해서 별명을 지어주는 문법
+  - `typealias` 기본 자료형에 typealias를 통해서 별명을 지어주는 문법
   
   - ```swift
     typealias Temperature = Double
@@ -270,7 +269,7 @@
 
 ### **5. 기타메모**
 
-- Int형식을 String형식으로 변환할 때, radix를 사용해, 원하는 진수로 바꿀 수 있다.
+- Int형식을 String형식으로 형변환할 때 radix를 사용해 원하는 진수로 바꿀 수 있다.
 
 - ```swift
   let binary = 2
