--- a/200909.md
+++ b/200909.md
@@ -44,8 +44,8 @@
     
     // 단항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 없어야 한다.
     ```
-
   
+    
 
   - Binary Operator(이항연산자): 피연산자가 두 개인 경우
 
@@ -61,8 +61,10 @@
     // 이항연산자를 사용할 경우 연산자와 피연산자 사이에 공백이 같아야 한다.
     // 사이 공백을 주지 않아도 되지만, 가끔 오류가 날 수 있으므로 2번째 예시가 권장.
     ```
+    
   
-
+  
+  
   - Ternary Operator(삼항연산자 또는 조건연산자): 피연산자가 세 개인 경우
   
     ```swift
@@ -91,7 +93,7 @@
 
   - ` * 곱하기` 	
   
-  - ` % 나머지`
+  - ` % 정수의 나머지`
   
   - ```swift
     let a = 10
@@ -108,7 +110,7 @@
 - #### Overflow
 
   
-  - 자료형에 저장할 수 있는 값의 범위를 초과하는 것을 Overflow라고 한다. Swift 산술 연산자가 (산술)Overflow를 허용하지 않지만, 특정 패턴을 구현하기 위해 Overflow연산자를 사용한다.
+  - 자료형에 저장할 수 있는 값의 범위를 초과하는 것을 Overflow라고 한다. Swift는 기본적으로 Overflow를 허용하지 않지만, 특정 패턴을 구현하기 위해 Overflow연산자를 사용한다.
   - Compile Time에 발견한 Overflow는 더 큰 자료형으로 변경해주면 문제를 해결할 수 있다.
   - 연산자 앞에 `&(앰퍼샌드)`를 붙여서 Overflow 연산을 허용할 수 있다.	
 
@@ -164,8 +166,6 @@
 - #### 삼항 연산자 (Ternary Conditional Operator)
 
   - Condition ? expr1 : expr2 
-- Bool 표현식 ? 동일한 자료형 : 동일한 자료형
-  
 
 
 
@@ -191,9 +191,7 @@
   -  `a ... b` 의 이항 연산자이고,
      `a...`  또는  `...a`처럼 단항연산자로 사용할 수 있다.
      
-  -  Half-Open Range Operator는  a ..< b 처럼 Upperbound가 범위에 포함되지 않는다.
-     
-    - `.contains` 특정한 값이 범위에 포함되는지 확인하는 method ✨
+  - Half-Open Range Operator는  a ..< b 처럼 Upperbound가 범위에 포함되지 않는다.
 
   - ```swift
      a ... b // a부터 b까지의 범위, 오름차순이 기준이고 내림차순으로 사용하고 싶을 땐
@@ -209,7 +207,5 @@
 
 ### 2. 기타메모
 
-- `.becomeFirstResponder()` Asks UIKit to make this object the first responder in its window.
-  📋  선택한 개체를 첫번째 Responder(마우스 커서가 위치하는 곳)로 설정하고 싶을 때 사용
+- `.becomeFirstResponder()` Asks UIKit to make this object the first responder in its window. 선택한 개체를 첫번째 Responder(마우스 커서가 위치하는 곳)로 설정하고 싶을 때 사용
 - `truncatingRemainder(dividingBy:)` 소수점 자료형에서 나머지값을 구한다. (정수형일땐 % 사용)
-
