--- a/200909.md
+++ b/200909.md
@@ -119,7 +119,7 @@
 
 - #### 비교 연산자
 
-  - 비교 연산자는 이항 연산자이고, 결과는 항상 Bool이다.
+  - 비교 연산자는 이항 연산자이고, 결과는 항상 Bool(ture || false)이다.
   - 피연산자의 자료형이 같아야 비교 가능하다.
   - `== Equa to  `                두 값이 같으면 true
   - `!=  Not Equa to  `      두 값이 다르면 true
@@ -132,15 +132,15 @@
 
   - 참과 거짓을 구분하는 연산자이고, 피연산자는 항상 Boolean 표현식이어야 한다. 연산의 결과는 항상 Bool이다. ✨
 
-  - `!`       Logical Not Operators (논리 부정 연산자)로 참을 거짓으로, 거짓을 참으로 바꿔준다. 전치 연산자로만 사용.
+  - `!`   Logical Not Operators (논리 부정 연산자)로 참을 거짓으로, 거짓을 참으로 바꿔준다. 전치 연산자로만 사용.
 
-  - `&&`     Logical And Operators로 모든 피연산자가 true일때만 true가 리턴이 되고 나머지 경우에는 모두 false로 리턴이 된다.
+  - `&&`  Logical And Operators로 모든 피연산자가 true일때만 true가 리턴이 되고 나머지 경우에는 모두 false로 리턴이 된다.
     
-  - `||`     Logical OR Operators로 하나의 피연산자가 true여도 true가 리턴이 된다.
+  - `||`  Logical OR Operators로 하나의 피연산자가 true여도 true가 리턴이 된다.
   
   - `Short-circuit Evaluation`  단락평가, 결과 도출에 필요한 최소한의 논리식만 평가하는 방식 ✨
     
-  - `Side Effect`     코드의 실행 결과로 인해, 값 또는 상태가 변경되는 것. 논리식에 Side Effect를 발생시킬 수 있는 코드가 포함되어 있는 경우, 논리적인 오류가 발생할 수 있기 때문에 조심해야 한다.
+  - `Side Effect`  코드의 실행 결과로 인해, 값 또는 상태가 변경되는 것. 논리식에 Side Effect를 발생시킬 수 있는 코드가 포함되어 있는 경우, 논리적인 오류가 발생할 수 있기 때문에 조심해야 한다.
   
   - ```swift
      true && true // true
@@ -172,7 +172,7 @@
 
 - #### 할당 연산자 (Assignment Operator)
 
-  -  `=` 할당연산자는 값을 저장하는 중요한 역할을 한다. 할당 연산자는 값을 리턴하지 않는다. ✨
+  -  `=` 할당연산자는 **값을 저장**하는 중요한 역할을 한다. 할당 연산자는 값을 리턴하지 않는다. ✨
   - 할당연산자를 기준으로 lvalue와 rvalue(대부분 literal)로 나뉜다.
 
 
