--- a/200910.md
+++ b/200910.md
@@ -363,38 +363,49 @@
 
 - `.isMultiple` 해당 값이 주어진 값의 배수면 true를 return하고 그렇지 않으면 false를 return한다.
 
-- ```swift
-  // 2부터 num까지 숫자중, 소수만 쏙 뺀 배열을 리턴하는 함수 만들어보기 (1은 소수가 아님)
-  
-  func primeNumber(num: Int) -> [Int] {
-      
-      var primes = [Bool](repeating: true, count: num + 1)
-      var primeNumbers = [Int]()
-      
-      for i in 2...num { 
-          if primes[i] { 
-              primeNumbers.append(i)
-              for j in stride(from: i*i, to: num + 1, by: i) {
-                  primes[j] = false
-              }
-          }
-      }
-      return primeNumbers
-  }
-  
-  primeNumber(num: 10) // [2,3,5,7]
-  primeNumber(num: 10).count // 4
-  
-  /*
-  ① 정수 파라미터를 받아, 정수 배열을 리턴하는 함수를 생성한다.
-  ② (num + 1)횟수 만큼 true를 반복하는 [Bool]배열과, 소수를 골라 담을 [Int]배열을 각각 한 개씩 선언한다.
-  ③ 다음, 2부터 num번째까지 반복하는 for-in문을 생성한다.
-  ④ if문은 true일때만 실행이 된다. if primes[i]는 priems의 i번째 요소가 true이면 if문이 실행이 되는데,
-  아직은 primes배열의 모든 요소가 true이기 때문에, 우선은 무조건 실행이 되며 primeNumber 배열에 반복상수 i를 추가한다.
-  ⑤ if문 안에 for-in구문을 하나 더 추가했다. stride문법을 사용해, i의 배수는 모두 false로 바뀐다.
-  ⑥ 예를들어, i가 2라고 가정할 경우, stride(from: i*i, to: num + 1, by: i) 문법에 따라, 4부터 2씩 증가하는 4,6,8...(num + 1)번째 배열의 요소(j)를 모두 false로 바뀌어 버렸다.
-  ⑦ 다시 반복구문이 실행되서 ④번으로 돌아와 if문을 평가할 땐, ⑥에서 바뀐 false로 평가된 if문은 실행되지 않으며, 다음 반복상수를 평가하고 true일때만 if문이 실행된다.	
-  ⑧ primeNumbers 배열에는 다른 수의 배수가 아닌 수, 결국 소수만 추가되며 소수의 갯수를 파악할 땐 .count메소드를 써주면 된다.
-  ```
+- <details>
+  <summary>조건문과 반복문을 사용해서 소수찾기</summary>
+  <div markdown="1">
+
+  - 조건문과 반복문을 사용해 2부터 num까지 숫자 중, 소수만 쏙 빼서 배열에 짚어넣는 함수를 만들어야 한다.
+
+  - 소수는 1과 자기 자신 외의 약수를 가지지 않는 1보다 큰 자연수다.
+
+  - ```swift
+    func primeNumber(num: Int) -> [Int] {
+        
+        var primes = [Bool](repeating: true, count: num + 1)
+        var primeNumbers = [Int]()
+        
+        for i in 2...num { 
+            if primes[i] { 
+                primeNumbers.append(i)
+                for j in stride(from: i*i, to: num + 1, by: i) {
+                    primes[j] = false
+                }
+            }
+        }
+        return primeNumbers
+    }
+    
+    primeNumber(num: 10) // [2,3,5,7]
+    primeNumber(num: 10).count // 4
+    ```
+
+    1. 정수 파라미터를 받아, 정수 배열을 리턴하는 함수를 생성한다.
+    2. *num + 1*횟수 만큼 *true*를 반복하는 [Bool]배열과, 소수를 골라 담을 [Int]배열을 각각 한 개씩 선언한다.
+    3. 2부터 num번째까지 반복하는 for-in문을 생성한다.
+    4.  if문은 조건이 true일때만 실행이 된다.
+       priems의 i번째 요소가 true이면 if문이 실행이 되는데, 아직은 primes배열의 모든 요소가 true이기 때문에, 우선은 실행이 되며 primeNumber 배열에 반복상수 i를 순서대로 추가한다.
+    5. if문 안에 for-in구문을 하나 더 추가했다. 이번엔 stride 함수를 호출해서 반복문을 사용했다.
+    6. `Stride(from: to: by:)` from: n번째부터, to: n-1까지, by:n번째 수만큼 증가(음수일 경우 줄어든다.)
+    7. stride가 사용된 반복문을 실행하면, i의 배수를 모두 false로 바꿔준다.
+    8. 예를들어, i가 2라고 가정할 경우, stride(from: i*i, to: num + 1, by: i) 함수에 따라, 4부터 2씩 증가하는 4,6,8...(num + 1)번째 배열의 요소(j)를 모두 false로 바뀌어 버렸다.
+    9.  다시 반복구문이 실행되서 ④번으로 돌아와 if문을 평가할 땐, ⑥에서 바뀐 false로 평가된 if문은 실행되지 않으며, 다음 반복상수를 평가하고 true일때만 if문이 실행된다.
+    10.  primeNumbers 배열에는 다른 수의 배수가 아닌 수, 결국 소수만 추가된다.
+    11. 소수의 갯수를 파악하고 싶을 땐 `.count`메소드를 써주면 된다.
+
+  </div>
+  </details>
 
   
