--- a/200910.md
+++ b/200910.md
@@ -401,11 +401,9 @@
     6. `Stride(from: to: by:)` from: n번째부터, to: n-1까지, by:n번째 수만큼 증가(음수일 경우 줄어든다.)
     7. stride가 사용된 반복문을 실행하면, i의 배수를 모두 false로 바꿔준다.
     8. 예를들어, i가 2라고 가정할 경우, stride(from: i*i, to: num + 1, by: i) 함수에 따라, 4부터 2씩 증가하는 4,6,8...(num + 1)번째 배열의 요소(j)를 모두 false로 바뀌어 버렸다.
-    9.  다시 반복구문이 실행되서 ④번으로 돌아와 if문을 평가할 땐, ⑥에서 바뀐 false로 평가된 if문은 실행되지 않으며, 다음 반복상수를 평가하고 true일때만 if문이 실행된다.
+    9.  다시 반복구문이 실행되서 *d.*번으로 돌아와 if문을 평가할 땐, *h*에서 false로 바꿔버린 순서는 실행되지 않고 다음 반복상수를 평가하고 true일때만 if문이 실행된다.
     10.  primeNumbers 배열에는 다른 수의 배수가 아닌 수, 결국 소수만 추가된다.
     11. 소수의 갯수를 파악하고 싶을 땐 `.count`메소드를 써주면 된다.
 
   </div>
   </details>
-
-  
