--- a/200911.md
+++ b/200911.md
@@ -116,7 +116,7 @@
 
   - Implicitly Unwrapped Optional (IUO)
     - 자료형 이름 뒤에 `!` 를 붙여준다.
-    - 어떤 특정 조건에서 값이 자동으로 추출된다.
+    - Type Annotation으로 타입을 직접 정해 준 경우 값이 자동으로 추출된다.
     - IUO는 형식추론을 사용하는 경우 자동으로 추출되지 않는다.
     - nil이 저장되어 있는 상태에서 값을 추출하면 강제추출과 마찬가지로 에러가 발생한다.
     - IBOUtlet에서 사용하는 이유는, 연결되지 않은 Outlet을 컴파일 시점에서 미리 발견하기 위해서 사용한다.
@@ -126,23 +126,59 @@
   - Nil-Coalescing Operator
 
     - Nil-Coalescing Operator를 사용하면 값이 저장되어 있는지 확인하는 코드와 값을 추출하는 코드를 직접 작성할 필요가 없다.
+    
     - 이항 연산자이다. 단락평가로 처리하기 때문에, 오른쪽 피연산자에는 Side Effect가 발생하는 코드가 오면 안된다.
-    - Optional을 제외하고 동일한 자료형이어야 한다.
-    - 왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression이어야 한다.
+    
+    - **Optional을 제외하고 동일한 자료형**이어야 한다.
+    
+  - **왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression**이어야 한다.
+    
     - 먼저 왼쪽에 있는 피연산자에 값이 저장되어 있는지 확인한다(= Optional Expression이 값을 return하는지 확인한다). 값을 리턴한다면, 이 값을 Unwrapping한 다음 연산의 결과로 return한다.
+    
     - 만약 값이 저장되어 있지 않았다면(=Optional Expression이 값을 return하지 않았다면), 오른쪽 피연산자를 평가하고 그 결과를 return한다. 주로 값이 없을 때 사용할 기본값을 전달한다.
-
+    
+    - ```swift
+      var name: String? = "Logan."
+      let non = "Whatever."
+      
+      print("Hello, " + (name ?? non))
+      // prints : Hello, Logan.
+      
+      name = nil
+      
+      print("Hello, " + (name ?? non))
+      // prints: Hello, Whatever.
+      ```
+    
+      
+    
     
 
 - #### Optional Chaining
 
   - Optional Chaining의 결과는 항상 Optional이다.
+  
   - Optional에 값이 저장되어 있다면, 이어지는 속성에 접근한다.
+  
   - Optional Chaining에 포함된 표현식이 nil을 return한다면 이어지는 표현식을 평가하지 않고 nil을 리턴한다.
+  
   - Optional Chaining의 타입은 마지막 표현식의 타입으로 결정이되고 항상 Optional로 return이 된다.
-  - Optional 표현식을 통해서 속성에 접근하거나 메소드를 호출할때는 반드시 표현식 뒤에 `?` 를 사용한다. (`!`도 사용할 수 있지만 되도록 사용하지 않는다.)
-
-
+  
+  - Optional 표현식을 통해서 속성에 접근하거나 메소드를 호출할때는 반드시 표현식 뒤에 `?` 를 사용한다.
+  
+  - 딕셔너리가 Optional이고 Key를 통해 값을 얻어야 할 땐, `[]` 앞에 ?를 사용하고, 서브스크립트가 리턴하는 값을 통해서 속성에 접근하거나 메소드를 호출해야 할 땐, `[]` 뒤에 ?를 사용해준다.
+  
+  - ```swift
+    let dictionary: [Int: String]? = [1: "One", 2: "Two"]
+    
+    dictionary?[1]
+    // "One"(Key 1의 Value = "One"): Key를 통해 값 "One"에 접근해야 할 때
+    
+    dictionary?[1]?.count
+    // 3(문자열 One의 count = 3): 서브스크립트를 통해 속성에 접근해야 할 때
+    ```
+  
+    
 
 ------
 
