--- a/200910.md
+++ b/200910.md
@@ -423,7 +423,7 @@
     2. *num + 1*횟수 만큼 *true*를 반복하는 [Bool]배열과, 소수를 골라 담을 [Int]배열을 각각 한 개씩 선언한다.
     3. 2부터 num번째까지 반복하는 for-in문을 생성한다.
     4.  if문은 조건이 true일때만 실행이 된다.
-       priems의 i번째 요소가 true이면 if문이 실행이 되는데, 아직은 primes배열의 모든 요소가 true이기 때문에, 우선은 실행이 되며 primeNumbers 배열에 `.append` 메소드를 사용해 반복상수 i를 순서대로 추가한다.
+       primes의 i번째 요소가 true이면 if문이 실행이 되는데, 아직은 primes배열의 모든 요소가 true이기 때문에, 우선은 실행이 되며 primeNumbers 배열에 `.append` 메소드를 사용해 반복상수 i를 순서대로 추가한다.
     5. if문 안에 for-in구문을 하나 더 추가했다. 이번엔 stride 함수를 호출해서 반복문을 사용했다.
     6. `Stride(from: to: by:)` from: n번째부터, to: n-1까지, by:n번째 수만큼 증가(음수일 경우 줄어든다.)
     7. stride가 사용된 반복문을 실행하면, i의 배수를 모두 false로 바꿔준다.
