--- a/200911.md
+++ b/200911.md
@@ -131,8 +131,8 @@
     
     - **Optional을 제외하고 동일한 자료형**이어야 한다.
     
-  - **왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression**이어야 한다.
-    
+    - **왼쪽의 피연산자는 항상 Optional Expression이어야 하고, 오른쪽 피연산자는 Non-Optional Expression**이어야 한다.
+      
     - 먼저 왼쪽에 있는 피연산자에 값이 저장되어 있는지 확인한다(= Optional Expression이 값을 return하는지 확인한다). 값을 리턴한다면, 이 값을 Unwrapping한 다음 연산의 결과로 return한다.
     
     - 만약 값이 저장되어 있지 않았다면(=Optional Expression이 값을 return하지 않았다면), 오른쪽 피연산자를 평가하고 그 결과를 return한다. 주로 값이 없을 때 사용할 기본값을 전달한다.
@@ -187,3 +187,22 @@
 ### **2. 기타메모**
 
 - Optional은 code를 Crash없이 처리할 때 주로 사용한다.
+
+- ```swift
+  let list: [Int?] = [0, nil, 2, nil, 4, nil, 6]
+  
+  //
+  for i in list {
+      guard let i = i else { continue }
+      print(i)
+  }
+  
+  //
+  for case let i? in list {
+      print(i)
+  }
+  
+  // Optional Pattern
+  ```
+
+  
