--- a/200914.md
+++ b/200914.md
@@ -81,6 +81,8 @@
   
   - Parameter는 함수 Body에서 사용할 수 있는 **임시 상수**다.
   
+  - 선언 할 땐 formal parameter, 호출할 때 전달하는 parameter는 actual parameter(또는 argument)라고 한다.
+  
   - 함수를 호출할 때 값을 전달해야 하므로, 호출하는 방법도 조금 달라진다.
   
   - 할당연산자 `=`를 사용해, parameter에 기본값을 선언할 수 있고,  `(a: Int ="0")` 이 때 직접 parameter로 값을 전달하지 않는다면, 기본값이 사용된다.
