이니셜라이저
내용 추가

--- a/201006.md
+++ b/201006.md
@@ -37,10 +37,12 @@
 
   - 옵셔널 속성은 기본값을 저장하지 않으면 nil로 초기화된다.
 
+  - 이름과 리턴형이 없기 때문에, 파라미터의 수와 자료형, 아규먼트 레이블로 구분한다.
+
   - 초기화 방법은 두가지가 있다.
 
     - ① 선언과 동시에 기본값을 저장 (새로운 인스턴스가 생성되는 시점에 자동으로 기본값이 저장)
-
+  
     - ② Initializer를 통해 초기화
   
     - ```swift
@@ -63,7 +65,13 @@
 
   - 구조체가 자동으로 제공하는 생성자다.
 
-  - 속성의 기본값이 없을 때와 var 저장속성으로 선언되어있을 때에 사용가능하다.
+  - 인스턴스를 생성할 때 제공된다.
+
+  -  저장속성이 var로 선언되어있을 경우에 제공하고, 저장속성이 let으로 선언되어있다면, 기본값이 없을때만 제공된다.
+
+  - 구조체 안에서 init키워드로 이니셜라이저를 직접 구현했을 경우, 멤버와이즈 이니셜라이저는 더 이상 제공되지 않는다.
+
+  - 익스텐션에서 init 키워드로 이니셜라이저를 구현하면, 멤버와이즈 이니셜라이저와 파라미터를 받는 이니셜라이저, 둘 다 사용할 수 있다.
 
   - ```swift
     struct MyBody {
@@ -101,10 +109,16 @@
 
   - Convenience Initializer (간편 생성자)
 
-    - 보통 필요한 속성만 초기화하고 클래스에 있는 다른 생성자를 호출해서 나머지 초기화를 완료하도록 구현한다.
+    - convenience 키워드를 추가해 사용할 수 있다.
 
-    - 클래스가 상속 계층에 포함되어 있다면, 지정 생성자를 상위 클래스의 지정 생성자를 호출해야 한다.
+    - 가능한 중복을 없애기 위해 필요한 속성만 초기화하고, 클래스에 있는 다른 생성자를 호출해서 나머지 초기화를 완료하도록 구현한다.
 
+    - **슈퍼 클래스의 이니셜라이저를 직접 호출할 수 없다.** 
+    
+    - **반드시 동일한 클래스에 있는 다른 이니셜라이저를 호출**한다. 최종적으로 지정생성자가 호출되도록 구현해야 한다. (이니셜라이저 델리게이션)
+    
+    - 그래서 오버라이딩의 개념은 적용되지 않는다.
+    
     - ```swift
       class MySizeObject {
           let width: Double
@@ -118,22 +132,25 @@
           convenience init(value: Double) { // Convenience Initializer, 간편 생성자
               self.init(width: value, height: value)
           }
-        
       }
       ```
 
-      
+
+
 
 - #### Automatic Initializer Inheritance
 
-  - 생성자 상속 조건은 조금 까다롭기 때문에 아래 규칙을 꼭 지켜주어야 한다.
-
-    1. 하위 클래스의 모든 속성이 기본값으로 초기화되어 있어야 한다.
-
-    2. 하위 클래스에서 지정 생성자를 직접 구현하지 않으면, 상위 클래스의 모든 지정 생성자가 상속된다.
-
+  
+- class의 경우 이니셜라이저가 실행이 완료되기 전에, super class의 이니셜라이저를 호출해줘야 한다.
+  
+- 생성자 상속 조건은 조금 까다롭기 때문에 아래 규칙을 꼭 지켜주어야 한다.
+  
+  1. 서브 클래스의 모든 속성이 기본값으로 초기화되어 있어야 한다.
+  
+  2. 서브 클래스에서 지정 생성자를 직접 구현하지 않으면, 상위 클래스의 모든 지정 생성자가 상속된다.
+  
     3. 하위 클래스가 모든 지정 생성자를 상속받았거나 재정의했다면 모든 간편 생성자가 상속된다.
-
+  
        ```swift
        class A {
            
@@ -162,10 +179,10 @@
                super.init(a: a, b: a)
            }
            
-       }
+     }
        // 이니셜라이저를 통해 클래스에 있는 모든 속성을 초기화한 다음, 상위 클래스에 있는 designated initailizer를 호출해주어야한다.
        ```
-
+  
        
 
 ------
@@ -205,3 +222,13 @@
 
 
 ### **3. 기타메모**
+
+- Delegate Across
+  - Convenience Initializer는 super class에 있는 initializer를 직접 호출하는 것이 불가능하다.
+  - **어떤 경우에도 Delegate Up이 불가능하기 때문에, self init키워드만 사용**해야 한다.
+  - 항상 동일한 클래스에 있는 다른 Designated Initializer를 호출하기 때문에, 오버라이딩이라는 개념이 적용되지 않는다.
+
+
+
+- Delegate Up
+  - Designated Initializer (지정 생성자)는 반드시 슈퍼클래스의 Designated Initializer (지정 생성자)를 호출해야 한다.
