--- a/200909.md
+++ b/200909.md
@@ -174,6 +174,8 @@
 
   -  `=` 할당연산자는 **값을 저장**하는 중요한 역할을 한다. 할당 연산자는 값을 리턴하지 않는다. ✨
   - 할당연산자를 기준으로 lvalue와 rvalue(대부분 literal)로 나뉜다.
+  - lvalue = 메모리 공간을 나타내는 값
+  - rvalue = 저장할 값을 나타내는 표현식
 
 
 
