문자열과 문자

--- a/200918.md
+++ b/200918.md
@@ -75,7 +75,7 @@
   - ```swift
     var nsStr: NSString = "Hello"
     
-    var swiftStr: String = nsStr as String
+    var swiftStr: String = nsStr as String // 브릿징이 가능
     ```
   
     
