속성과 메소드

--- a/200926.md
+++ b/200926.md
@@ -29,6 +29,12 @@
 
 
 
+### **4. 기타메모**
+
+- mutating Keyword
+
+
+
 ------
 
 
@@ -44,7 +50,7 @@
   - ```swift
     struct Person {
         let name: String // ① Constant Instance Stored Property 상수저장속성
-        var birthYear: Int // ② Variable Instance Stored Property 변수저장속성
+        var age: Int // ② Variable Instance Stored Property 변수저장속성
     }
     
     // ①, ② : 인스턴스에 속한 속성들이다.
@@ -132,8 +138,6 @@
     ```
 
     
-
-
 
 
 
@@ -272,3 +276,15 @@
     ```
 
 
+
+
+
+------
+
+
+
+### **4.  기타메모**
+
+- #### mutating Keyword
+
+  - 값형식에서 속성을 변경하는 메소드를 구현할 땐, 반드시 `mutating func` 키워드로 선언해야 한다.
