--- a/200928.md
+++ b/200928.md
@@ -171,7 +171,7 @@
 
 - #### 속성 오버라이딩
 
-  - 속성에서 오버라이딩을 사용해야 할 땐, 계산속성을 사용해야 한다.
+  - 속성에서 오버라이딩을 사용해야 할 땐, 계산속성이나 프로퍼티 옵저버를 사용해야 한다.
 
   - 읽기와 쓰기가 가능한 속성을 읽기 전용으로 오버라이딩하는 것은 허용되지 않는다.
 
