문자열과 문자

--- a/200918.md
+++ b/200918.md
@@ -128,30 +128,50 @@
 - #### Format Specifier
 
   - `%char`  % 문자와 포멧 문자로 구성되어 있다.
-  
+
   - 문자열 포멧을 직접 지정할 때는 포멧 지정자를 사용한다.
-  
+
   - `%@`  문자, %다음 `n$`(n은 1이상의 정수) 문자를 추가해, 포멧의 순서를 정해줄 수 있다.
-  
+
   - `%d`  정수
-  
+
   - `%f`  실수
-  
+
   - ```swift
-    var size = 56.78
-    var str = String(format: "%.1fKB", size)
+    var str = "12.34KB"
     
-    print(str)
+    let size = 12.34
+    str = "\(size)KB"
     
-    // Prints: 56.8KB
+    String(format: "%.2fKB", size)
+    String(format: "Hello, %@", "Swift.")
+    String(format: "%10.2f", 12.34)
     
+    // 전체문자열을 10자리로 출력한 다음 소수점 2자리
+    
+    String(format: "[%d]", 123)
+    String(format: "[%10d]", 123)
+    String(format: "[%-10d]", 123)
+    
+    let firstName = "Yoon-ah"
+    let lastName = "Lim"
+    
+    let korFormat = "그녀의 이름은 %2$@ %1$@ 입니다."
+    let engFormat = "Her name is %1$@ %2$@."
+    
+    String(format: korFormat, firstName, lastName)
+    String(format: engFormat, firstName, lastName)
+    
+    //
+    //
+    //
     // [#1]
     let dateFormat = DateFormatter()
     dateFormat.dateStyle = .medium
     dateFormat.timeStyle = .medium
     dateFormat.locale = Locale(identifier: "Ko_kr")
     
-    if let str = dateFormat.string(for: Date()) {
+  if let str = dateFormat.string(for: Date()) {
         "오늘은 \(str)입니다."
     }
     
@@ -171,7 +191,7 @@
     
     numberFormat.string(for: salary)
     ```
-  
+    
     
 
 - #### String Indices (String Index)
