--- a/201006.md
+++ b/201006.md
@@ -140,49 +140,47 @@
 
 - #### Automatic Initializer Inheritance
 
+
+  - class의 경우 이니셜라이저가 실행이 완료되기 전에, super class의 이니셜라이저를 호출해줘야 한다.
+
+  - 서브 클래스의 모든 속성이 기본값으로 초기화되어 있어야 한다.
+
+  - 서브 클래스에서 지정 생성자를 직접 구현하지 않으면, 상위 클래스의 모든 지정 생성자가 상속된다.
+
+  - 하위 클래스가 모든 지정 생성자를 상속받았거나 재정의했다면 모든 간편 생성자가 상속된다.
+
+  - ```swift
+    class A {
+        
+        let a: Double
+        let b: Double
+      
+        init(a: Double, b: Double) {
+            self.a = a
+            self.b = b
+        }
+        
+    }
+    
+    class B: A {
+        
+        var c: Double = 0.0
+        
+    }
+    // 하위 클래스의 속성에 기본값을 주고, 지정 생성자를 구현하지 않아서 상위 클래스의 모든 지정 생성자가 상속되었다.
+    
+    class B: A {
+        
+        var c: Double
+        init(a: Double, b: Double, c: Double) {
+            self.c = c
+            super.init(a: a, b: a)
+            }
+    }
+    // 이니셜라이저를 통해 클래스에 있는 모든 속성을 초기화한 다음, 상위 클래스에 있는 designated initailizer를 호출해주어야한다.
+    ```
+
   
-- class의 경우 이니셜라이저가 실행이 완료되기 전에, super class의 이니셜라이저를 호출해줘야 한다.
-  
-- 생성자 상속 조건은 조금 까다롭기 때문에 아래 규칙을 꼭 지켜주어야 한다.
-  
-  1. 서브 클래스의 모든 속성이 기본값으로 초기화되어 있어야 한다.
-  
-  2. 서브 클래스에서 지정 생성자를 직접 구현하지 않으면, 상위 클래스의 모든 지정 생성자가 상속된다.
-  
-    3. 하위 클래스가 모든 지정 생성자를 상속받았거나 재정의했다면 모든 간편 생성자가 상속된다.
-  
-       ```swift
-       class A {
-           
-           let a: Double
-           let b: Double
-         
-           init(a: Double, b: Double) {
-               self.a = a
-               self.b = b
-           }
-           
-       }
-       
-       class B: A {
-           
-           var c: Double = 0.0
-           
-       }
-       // 하위 클래스의 속성에 기본값을 주고, 지정 생성자를 구현하지 않아서 상위 클래스의 모든 지정 생성자가 상속되었다.
-       
-       class B: A {
-           
-           var c: Double
-           init(a: Double, b: Double, c: Double) {
-               self.c = c
-               super.init(a: a, b: a)
-               }
-       }
-       // 이니셜라이저를 통해 클래스에 있는 모든 속성을 초기화한 다음, 상위 클래스에 있는 designated initailizer를 호출해주어야한다.
-       ```
-  
-       
 
 ------
 
@@ -230,4 +228,15 @@
 
 
 - Delegate Up
+  
   - Designated Initializer (지정 생성자)는 반드시 슈퍼클래스의 Designated Initializer (지정 생성자)를 호출해야 한다.
+  
+
+
+
+- 2 phase Initialization
+
+  - 초기화코드에서 중복을 최대한 제거하고 모든 속성을 효율적으로 초기화하기 위한 작업이다.
+  - 클래스 초기화 방식은 2단계로 이루어진다. 1단계에서 선언되어있는 모든 속성이 초기화된다. 서브클래스에서 슈퍼클래스 순서로 상속계층을 따라 올라간다.
+- 모든 속성이 초기화되면 인스턴스 유효성이 확보되고 2단계가 시작된다. 슈퍼클래스에서 서브클래스 순서로 부가적인 초기화작업을 시작한다. 이 시점에는 메소드 호출도 가능하다.
+  
