--- a/200928.md
+++ b/200928.md
@@ -70,7 +70,7 @@
 
   - 마치 Subclass에서 직접 선언한것처럼 상속된 멤버를 자유롭게 사용할 수 있다.
 
-  - `Overriding` Superclass로부터 상속한 멤버가 Subclass에 적절하지 않은 경우, 구현을 수정하는 것도 가능한데, 이것을 오버라이딩(Overriding, 재정의)이라고 부른다. 
+  - `Overriding` Superclass로부터 상속한 멤버 구현을 수정하는 것도 가능한데, 이것을 오버라이딩(Overriding, 재정의)이라고 부른다. 
 
   - ```swift
     class A {
@@ -271,8 +271,7 @@
 
   - `is` 연산자를 사용한다. = 타입을 체크한다.
   - `is` **연산자는 런타임에 타입을 체크**하기때문에, 최종결과를 확인하기 위해선 코드를 실행해봐야 한다.
-  - 두 피연산자의 형식이 동일한 경우 true가 리턴된다.
-  - 왼쪽 피연산자의 형식이 오른쪽 피연산자 형식과 동일한 상속 계층에 있고 오른쪽 피연산자가 상위 클래스라면 true가 리턴된다. 
+  - 두 피연산자의 형식이 호환될 경우 true가 리턴된다.
 
 
 
@@ -365,4 +364,3 @@
 ### 5. 기타메모
 
 - `Overloading` Swift는 오버로딩(Overloading)을 지원한다. 오버로딩은 하나의 형식에서 동일한 이름을 가진 다수의 멤버를 구현하는 것이다. 함수 이름과 파라미터, 리턴형을 모두 포함해서 함수를 식별하기 때문에 이름이 같아도 파라미터 형식만 다르다면 문제없이 식별할 수 있다.
-
