--- a/201007.md
+++ b/201007.md
@@ -67,6 +67,22 @@
 - 방대한 모든 자료형과 형식, 메소드를 외울 수는 없지만, Date 등 자주 쓰는 형식은 나만의 extension을 만들거나 참고하여 포트폴리오로도 활용하거나 능률을 올릴 수 있다.
 
 - ```swift
+  extension String {
+  
+      subscript(idx: Int) -> String? {
+          guard (0..<count).contains(idx) else { return nil }
+          let target = index(startIndex, offsetBy: idx)
+          return String(self[target])
+  
+      }
+  }
+  
+  // 정수로 문자열 인덱스 전달하기
+  ```
+
+  
+
+- ```swift
   extension Date {
       init?(_ year: Int, _ month: Int, _ day: Int) {
           let calendar = Calendar.current   
@@ -80,9 +96,8 @@
   }
   
   let oneDay = Date(2002, 1, 1)
-  // 익스텐션으로 날짜를 구현해두면 사용하기 편하다.
-  // 만약 날짜를 만드는 익스텐션을 구현하고 싶은 경우, 값을 잘못 입력했을 경우를 대비해 failable initialier을 사용해주는게 좋다.
+  // 생성자를 활용해 Date 타입의 날짜 구현하기
   ```
-
   
+
 
