--- a/201007.md
+++ b/201007.md
@@ -83,6 +83,8 @@
   
 
 - ```swift
+  // 생성자를 활용한 Date 타입의 날짜 구현
+  
   extension Date {
       init?(_ year: Int, _ month: Int, _ day: Int) {
           let calendar = Calendar.current   
@@ -96,7 +98,32 @@
   }
   
   let oneDay = Date(2002, 1, 1)
-  // 생성자를 활용해 Date 타입의 날짜 구현하기
+  
+  
+  
+  // D-day 계산 구현
+  extension Date {
+      
+      func daysBetweenDate(days: Int) -> String {
+          let calendar = Calendar.current
+          guard let days = calendar.date(byAdding: .day, value: days, to: self) else { return "" }
+          let dateFormat = DateFormatter()
+          dateFormat.dateStyle = .full
+          return dateFormat.string(from: days)
+      }
+      
+      func daysBetweenDate(targetDate: Self) -> String {
+          let calendar = Calendar.current
+          guard let countedDay = calendar.dateComponents([.day], from: calendar.startOfDay(for: self), to: calendar.startOfDay(for: targetDate)).day else { return "" }
+          
+          let numberFormat = NumberFormatter()
+          numberFormat.numberStyle = .decimal
+          
+          guard let livedDay = numberFormat.string(from: NSNumber(value: countedDay)) else { return "" }
+          return livedDay + "일"
+      }
+      
+  }
   ```
   
 
